Fix spacing above main actors in article template

--- a/app/public/styles/base.css
+++ b/app/public/styles/base.css
@@ -115,3 +115,6 @@ body {
 .key-events .event .title {
   display: block;
 }
+section.main-actors {
+  clear:both;
+}
